<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salmanyousaf.lawyerlocator.Detail">

    <RelativeLayout
        android:id="@+id/detailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/linearImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/gradiance_background">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewDetail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_people_black_24dp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="#999"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_below="@id/imageViewDetail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:background="@drawable/drawable_detail"
            android:textColor="@color/colorAccent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textSize="32sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/linearImage"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:background="@drawable/drawable_detail"
            android:textColor="@color/colorAccent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="2.5dp"
            android:textStyle="normal"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:layout_below="@id/textViewUsername"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/buttonMap"
            android:text="@string/path_finder"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:background="@drawable/button"
            android:layout_below="@id/textViewLocation"
            android:layout_margin="8dp"
            />

        <Button
            android:id="@+id/buttonRating"
            android:text="@string/rating"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#fff"
            android:background="@drawable/button"
            android:layout_below="@id/buttonMap"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/textViewCaseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casetype"
            android:background="@drawable/drawable_detail"
            android:textColor="@color/colorAccent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textStyle="normal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:layout_below="@id/buttonRating"
            android:layout_centerHorizontal="true"/>

        <RatingBar
            android:id="@+id/ratingBarDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonRating"
            android:progressTint="#a69a44"
            android:rating="0"
            android:layout_centerHorizontal="true"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/ratingBarDetail">

            <Button
                android:id="@+id/buttonMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:textColor="#fff"
                android:text="@string/message"
                tools:ignore="ButtonStyle"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:textColor="#fff"
                android:text="@string/call"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#fff"
                android:background="@drawable/button"
                android:text="@string/chat"
                tools:ignore="ButtonStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <View
            android:id="@+id/seperatorRes"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/seperator"
            android:layout_below="@id/linearLayout"/>

        <TextView
            android:id="@+id/tvReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_user"
            style="@style/detailtextView"
            android:layout_below="@id/seperatorRes"/>

        <Switch
            android:id="@+id/switchReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seperatorRes"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvReserve"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@id/tvReserve"
            android:layout_alignParentRight="true" />

        <ProgressBar
            android:id="@+id/loading_indicator_switch"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/seperatorRes"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="32dp" />

        <TextView
            android:id="@+id/waitingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seperatorRes"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:text="@string/waiting_for_approval"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_marginEnd="32dp"
            tools:ignore="RtlHardcoded" />

        <View
            android:id="@+id/seperatorDes"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/seperator"
            android:layout_below="@id/tvReserve"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/detailtextView"
            android:layout_below="@id/seperatorDes"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="?android:textColorPrimary"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:layout_below="@id/seperatorDes"
            android:layout_toEndOf="@id/tvDescription"
            android:layout_toRightOf="@id/tvDescription" />

        <View
            android:id="@+id/seperatorCon"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/seperator"
            android:layout_below="@id/textViewDescription"/>

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            style="@style/detailtextView"
            android:layout_below="@id/seperatorCon"/>

        <TextView
            android:id="@+id/textViewContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="?android:textColorPrimary"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:layout_below="@id/seperatorCon"
            android:layout_toEndOf="@id/tvContact"
            android:layout_toRightOf="@id/tvContact" />

        <View
            android:id="@+id/seperatorDate"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/seperator"
            android:layout_below="@id/textViewContactNo"/>

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            style="@style/detailtextView"
            android:layout_below="@id/seperatorDate"/>

        <TextView
            android:id="@+id/textViewDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textColor="?android:textColorPrimary"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:layout_below="@id/seperatorDate"
            android:layout_toEndOf="@id/tvDateTime"
            android:layout_toRightOf="@id/tvDateTime" />

        <View
            android:id="@+id/seperatorExp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            style="@style/seperator"
            android:layout_below="@id/textViewDateTime"/>

        <TextView
            android:id="@+id/tvExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Experience"
            style="@style/detailtextView"
            android:layout_below="@id/seperatorExp"/>

        <TextView
            android:id="@+id/textViewExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiences"
            android:textColor="?android:textColorPrimary"
            android:textStyle="normal"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:layout_below="@id/seperatorExp"
            android:paddingBottom="16dp"
            android:layout_toEndOf="@id/tvExperience"
            android:layout_toRightOf="@id/tvExperience" />

    </RelativeLayout>

</ScrollView>




