<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/app_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_view"
        android:text="@string/name"
        android:textSize="20sp"
        android:paddingTop="16dp"
        android:textColor="?android:textColorPrimary"
        android:layout_toEndOf="@id/image_view"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_view"
        android:layout_toRightOf="@id/image_view"
        android:text="@string/location"
        android:textSize="13sp"
        android:drawableLeft="@drawable/ic_location_on_green_24dp"
        android:textStyle="normal"
        android:layout_marginBottom="8dp"
        android:textColor="#777"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:paddingTop="4dp"
        android:layout_toEndOf="@id/image_view"
        android:drawableStart="@drawable/ic_location_on_green_24dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/caseType_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/casetype"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#777"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        tools:ignore="RelativeOverlap" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:progressTint="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        tools:ignore="RtlHardcoded,UnusedAttribute" />


</RelativeLayout>
